# plone.scim

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  Containerfile  LICENSE.rst  MANIFEST.in  Makefile  README.rst  base.cfg  buildout.cfg  plone-reload.yml  plone.dexterity.102.patch  requirements-buildout-py2.txt  requirements-buildout-py3.nix  requirements-buildout.nix  requirements-buildout.txt  requirements-p43-py2.nix  requirements-p52-py2.nix  requirements-plone43-python2.nix  requirements-plone43-python2.txt  requirements-plone43-python27.nix  requirements-plone43-python27.txt  requirements-plone52-python2.nix  requirements-plone52-python2.txt  requirements-plone52-python27.nix  requirements-plone52-python27.txt  requirements-plone52-python3.nix  requirements-plone52-python3.txt  requirements-plone52-python37.nix  requirements-plone52-python37.txt  requirements-python2.nix  requirements-python3.nix  requirements.nix  requirements.txt  setup.cfg  setup.nix  setup.py  shell.nix  test_plone43.cfg  test_plone52.cfg
docs/: conf.py  index.rst
helpers/: scimtoken.py
src/plone/: __init__.py
src/plone/scim/: __init__.py  common.py  configure.zcml  controlpanel.py  exceptions.py  filter_parser.py  groups.py  interfaces.py  protocol.py  protocol.zcml  resource_types.py  schemas.py  service_provider_config.py  services.py  setuphandlers.py  testing.py  upgrades.py  upgrades.zcml  user.py  users.py  utils.py
src/plone/scim/browser/: configure.zcml
src/plone/scim/locales/: update.py  update.sh
src/plone/scim/profiles/default/: browserlayer.xml  controlpanel.xml  rolemap.xml
src/plone/scim/profiles/uninstall/: browserlayer.xml
src/plone/scim/rfc7643/: README  enterpriseUser.json  group.json  resourceType.json  schema.json  serviceProviderConfig.json  user.json
src/plone/scim/tests/: test_common.py  test_filter_parser.py  test_resource_types.py  test_robot.py  test_schemas.py  test_service_provider_config.py  test_setup.py  test_users.py
src/plone/scim/tests/robot/: test_example.robot
