[metadata]
name = plone.scim
version = 0.1.0.dev0
description = SCIM 2.0 provider support for Plone
long_description = file: README.rst, CONTRIBUTORS.rst, CHANGELOG.rst
keywords = Python Plone
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://pypi.python.org/pypi/plone.scim
license = GPL version 2
classifiers =
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: Addon",
    "Framework :: Plone :: 5.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",

[options]
include_package_data = True
install_requires =
    setuptools
    plone.rest
    jsonschema
    Products.CMFPlone
namespace_packages =
    plone
package_dir =
    = src
packages = find:
zip_safe = False
python_requires =
    ==2.7

[options.packages.find]
where =
    src

[options.extras_require]
test =
    requests
    plone.app.testing
    plone.app.robotframework
    # Plone KGS does not use this version, because it would break
    # Remove if your package shall be part of coredev.
    # plone_coredev tests as of 2016-04-01.
    # plone.testing>=5.0.0
    plone.app.contenttypes
    plone.app.robotframework [debug]

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone
console_scripts =
    update_locale = plone.scim.locales.update:update_locale

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
# for details see
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py

[flake8]
exclude = bootstrap.py,docs,*.egg.,omelette
max-complexity = 15

[yapf]
based_on_style = pep8
allow_multiline_lambdas = True
allow_split_before_dict_value = False
coalesce_brackets = True
dedent_closing_brackets = True
join_multiple_lines = False
space_between_ending_comma_and_closing_bracket = True
split_arguments_when_comma_terminated = True
split_before_expression_after_opening_paren = True
split_before_first_argument = True
split_complex_comprehension = True
